<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a1084081.oriondemoapp.DetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
               style="@style/detail_text_style"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:id="@+id/textViewName" />

            <TextView
                style="@style/detail_text_style"
                android:text="@string/username"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                style="@style/detail_text_style"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:id="@+id/textViewPhone" />

            <TextView
                style="@style/detail_text_style"
                android:text="@string/phone"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                style="@style/detail_text_style"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:id="@+id/textViewAddress" />

            <TextView
                style="@style/detail_text_style"
                android:text="@string/address"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                style="@style/detail_text_style"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:id="@+id/textViewWebsite" />

            <TextView
                style="@style/detail_text_style"
                android:text="@string/website"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>
            <TextView
                style="@style/detail_text_style"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:id="@+id/textViewCompany" />

            <TextView
                style="@style/detail_text_style"
                android:text="@string/company"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />


            </LinearLayout>
    </ScrollView>
</LinearLayout>
